# hrh_bot

./: CMakeLists.txt  Dockerfile  README.md
src/: CMakeLists.txt  main.c
